src/objects/Loop__Form_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Loop__Actions__c</fullName>
        <label>Actions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Advanced_Conditions__c</fullName>
        <label>Advanced Conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Conditions__c</fullName>
        <label>Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__DDP__c</fullName>
        <label>DDP</label>
        <referenceTo>Loop__DDP__c</referenceTo>
        <relationshipLabel>Form Rules</relationshipLabel>
        <relationshipName>Form_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Form Rule</label>
    <nameField>
        <displayFormat>FR-{00000}</displayFormat>
        <label>Form Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>